--- a/modules/mod04-eda2.qmd
+++ b/modules/mod04-eda2.qmd
@@ -10,6 +10,7 @@ The idea is to have a first contact with the data.
 # recommended packages
 library(tidyverse)
 library(lubridate)
+library(viridis)
 ```
 
 
@@ -21,52 +22,105 @@ library(lubridate)
 Here are some EDA ideas.
 
 
-### Accidents Per Year
+### Tile Graph
 
-Distribution of crashes per year in California
+Tile Graph of Year and Month
 
-```r
-# Accident Year
-crashes |>
-  count(ACCIDENT_YEAR, name = "count") |>
-  ggplot(aes(x = ACCIDENT_YEAR, y = count)) +
-  geom_col() +
-  scale_x_continuous(breaks = 2014:2023, labels = 14:23) +
-  scale_y_continuous(labels = scales::comma) +
-  labs(title = "Frequency of Crash Accidents (in CA) per Year",
-       x = "Accident Year")
+```{r eval = FALSE}
+# without viridis color palette
+crashes |> 
+  count(ACCIDENT_YEAR, MONTH, name = "count") |> 
+  ggplot(aes(x = ACCIDENT_YEAR, y = MONTH)) +
+  geom_tile(aes(fill = count), linewidth = 0.5, color = "white") +
+  scale_x_continuous(breaks = 2014:2023) +
+  scale_y_continuous(breaks = 1:12)
 ```
 
 
-### Accidents Per Month
-
-Distribution of crashes per month in California
-
-```r
-# Accident Year
-crashes |>
-  mutate(MONTH = month(COLLISION_DATE)) |>
-  count(MONTH, name = "count") |>
-  ggplot(aes(x = MONTH, y = count)) +
-  geom_col() +
-  scale_x_continuous(breaks = 1:12, labels = 1:12) +
-  scale_y_continuous(labels = scales::comma) +
-  labs(title = "Frequency of Crash Accidents (in CA) per Month",
-       subtitle = "(2014 - 2023)",
-       x = "Month")
+```{r eval = FALSE}
+# with viridis color palette
+crashes |> 
+  count(ACCIDENT_YEAR, MONTH, name = "count") |> 
+  ggplot(aes(x = ACCIDENT_YEAR, y = MONTH)) +
+  geom_tile(aes(fill = count), linewidth = 0.5, color = "white") +
+  scale_fill_viridis() +
+  scale_x_continuous(breaks = 2014:2023) +
+  scale_y_continuous(breaks = 1:12)
 ```
 
 
-### Accidents Per Month, Facets by Year
+### More Tile Graphs
 
-Distribution of crashes per month in California
+- Month (x-axis) & Day of week (y-axis), for all years
 
-```r
-crashes |>
-  mutate(MONTH = month(COLLISION_DATE)) |>
-  count(ACCIDENT_YEAR, MONTH, name = "count") |>
-  ggplot(aes(x = MONTH, y = count)) +
-  geom_col() +
-  scale_x_continuous(breaks = 1:12, labels = 1:12) +
-  facet_wrap(~ ACCIDENT_YEAR)
+- Month (x-axis) & Day of week (y-axis), for a given year
+
+- Month (x-axis) & Day of week (y-axis), faceting by year
+
+- Week (x-axis) & Day of week (y-axis)
+
+
+
+### Types of Collision
+
+```{r eval = FALSE}
+# most common type of collision
+crashes |> 
+  count(TYPE_OF_COLLISION, name = "count", sort = TRUE)
 ```
+
+```{r eval = FALSE}
+# most common type of collision
+crashes |> 
+  count(TYPE_OF_COLLISION, name = "count", sort = TRUE) |> 
+  ggplot(aes(y = reorder(TYPE_OF_COLLISION, count), x = count)) +
+  geom_col() +
+  labs(title = "Number of crashes (2014-2023)",
+       y = "Type of crash")
+```
+
+
+
+### Type of collision per year
+
+```{r eval = FALSE}
+crashes |> 
+  count(ACCIDENT_YEAR, TYPE_OF_COLLISION, name = "count") |> 
+```
+
+```{r eval = FALSE}
+# normalized bar chart (Year, type of crash)
+crashes |> 
+  ggplot(aes(x = ACCIDENT_YEAR, fill = TYPE_OF_COLLISION)) +
+  geom_bar(position = "fill")
+```
+
+```{r eval = FALSE}
+# bar chart (Year, type of crash)
+crashes |> 
+  ggplot(aes(x = ACCIDENT_YEAR, fill = TYPE_OF_COLLISION)) +
+  geom_bar()
+```
+
+```{r eval = FALSE}
+# timeline (type of crash per year)
+crashes |> 
+  count(ACCIDENT_YEAR, TYPE_OF_COLLISION, name = "count") |> 
+  ggplot(aes(x = ACCIDENT_YEAR, y = count, color = TYPE_OF_COLLISION)) +
+  geom_line()
+```
+
+
+### Other ideas
+
+- Most Common Type of Collision per Month
+
+- Most Common Type of Collision per Hour
+
+- Most Common Type of Collision per Hour and Day
+
+- Most Common Type of Collision per County
+
+- Most Common Type of Collision in a given City
+
+
