--- a/modules/mod02-questions.qmd
+++ b/modules/mod02-questions.qmd
@@ -50,3 +50,12 @@ The Independent: This tiny coastal California city is the DUI capital of the sta
 > A picturesque seven-mile stretch running along the Pacific Ocean in California 
 > harbors a dark secret: it’s the drunk driving capital of the Golden State.
 
+\
+
+Berkeleyside: Paint the curbs red: New parking law will cost Berkeley at least $1.25M
+
+<https://www.berkeleyside.org/2025/01/24/berkeley-parking-crosswalks-law-illegal-parking>
+
+> More than 80% of severe and fatal traffic crashes in Berkeley occur in or near crosswalks. 
+> The city has identified 918 intersections to tackle first.
+
